[gd_scene load_steps=6 format=3 uid="uid://dlichn2b72vr7"]

[ext_resource type="Texture2D" uid="uid://64vl8dhjq5xi" path="res://icon.svg" id="1_76gra"]
[ext_resource type="Script" uid="uid://bo63nho4fqqub" path="res://assets/UI/2d_hud.gd" id="1_r3mer"]
[ext_resource type="ButtonGroup" uid="uid://dgoxbso65ctny" path="res://assets/UI/tower_button_group.tres" id="2_q2cnw"]
[ext_resource type="Texture2D" uid="uid://cqedqgd8kybb0" path="res://assets/sky/DaySkyHDRI051B_2K-HDR.exr" id="4_vb5t4"]
[ext_resource type="Texture2D" uid="uid://c3hm3lf8v05wr" path="res://assets/sky/EveningSkyHDRI041B_2K-HDR.exr" id="5_mpv6s"]

[node name="2dHud" type="CanvasLayer"]
script = ExtResource("1_r3mer")
button_group = ExtResource("2_q2cnw")

[node name="LeftPanel" type="PanelContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 280.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="GoldBox" type="HBoxContainer" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label2" type="Label" parent="LeftPanel/VBoxContainer/GoldBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 27
text = "Gold:"
horizontal_alignment = 2

[node name="Gold" type="Label" parent="LeftPanel/VBoxContainer/GoldBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 34
text = "999"

[node name="Label" type="Label" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "      Towers      "
horizontal_alignment = 1
justification_flags = 161

[node name="GridContainer" type="GridContainer" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 4

[node name="0" type="TextureButton" parent="LeftPanel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
button_group = ExtResource("2_q2cnw")
texture_normal = ExtResource("1_76gra")
texture_pressed = ExtResource("4_vb5t4")
texture_hover = ExtResource("5_mpv6s")
ignore_texture_size = true
stretch_mode = 5

[node name="1" type="TextureButton" parent="LeftPanel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
button_group = ExtResource("2_q2cnw")
texture_normal = ExtResource("1_76gra")
texture_pressed = ExtResource("4_vb5t4")
texture_hover = ExtResource("5_mpv6s")
ignore_texture_size = true
stretch_mode = 5

[node name="2" type="TextureButton" parent="LeftPanel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
button_group = ExtResource("2_q2cnw")
texture_normal = ExtResource("1_76gra")
texture_pressed = ExtResource("4_vb5t4")
texture_hover = ExtResource("5_mpv6s")
ignore_texture_size = true
stretch_mode = 5

[node name="3" type="TextureButton" parent="LeftPanel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
button_group = ExtResource("2_q2cnw")
texture_normal = ExtResource("1_76gra")
texture_pressed = ExtResource("4_vb5t4")
texture_hover = ExtResource("5_mpv6s")
ignore_texture_size = true
stretch_mode = 5

[node name="Name" type="Label" parent="LeftPanel/VBoxContainer"]
custom_minimum_size = Vector2(1, 85)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Name of current tower"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HealthBox" type="HBoxContainer" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer/HealthBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 16
text = "Health?:"

[node name="Health" type="Label" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer/HealthBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "999"
horizontal_alignment = 2

[node name="DamageBox" type="HBoxContainer" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer/DamageBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 16
text = "Attack damage:"

[node name="Damage" type="Label" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer/DamageBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "999"
horizontal_alignment = 2

[node name="SpeedBox" type="HBoxContainer" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer/SpeedBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 16
text = "Attack speed:"

[node name="Speed" type="Label" parent="LeftPanel/VBoxContainer/MarginContainer/VBoxContainer/SpeedBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "999"
horizontal_alignment = 2

[node name="Description" type="Label" parent="LeftPanel/VBoxContainer"]
custom_minimum_size = Vector2(1, 110)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Descriptions should be one long sentence or two short ones like these. Briefly describe what the tower does and why it's different."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Price" type="HBoxContainer" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = -50

[node name="TextureRect" type="TextureRect" parent="LeftPanel/VBoxContainer/Price"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("1_76gra")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="LeftPanel/VBoxContainer/Price"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "9999"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Buy" type="Button" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Buy"

[node name="RightPanel" type="PanelContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RightPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100
alignment = 1

[node name="NextWave" type="HBoxContainer" parent="RightPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = -50

[node name="Label2" type="Label" parent="RightPanel/VBoxContainer/NextWave"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 27
text = "Next wave:"
horizontal_alignment = 1

[node name="Label" type="Label" parent="RightPanel/VBoxContainer/NextWave"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 34
text = "999"
horizontal_alignment = 2

[node name="StartWave" type="Button" parent="RightPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Start Wave"

[connection signal="pressed" from="LeftPanel/VBoxContainer/GridContainer/0" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LeftPanel/VBoxContainer/GridContainer/1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LeftPanel/VBoxContainer/GridContainer/2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LeftPanel/VBoxContainer/GridContainer/3" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LeftPanel/VBoxContainer/Buy" to="." method="_on_buy_pressed"]
